--- a/index.html
+++ b/index.html
@@ -1,120 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chartApp</title>
-    <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script> 
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>chartApp</title>
+  <link rel="stylesheet" href="styles/common.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Nanum+Myeongjo:wght@400;700;800&display=swap"
+    rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
 </head>
 <body>
-    <div class="page-container">
-        <header>
-            <nav class="nav-section">
-                <section class="nav-section1">
-                    <div class="nav-image">
-                        <img src="/Images/images.jpeg" alt="Logo">
-                    </div>
-                    <div class="searchbar">
-                        <img src="/Images/search.svg" alt="Search">
-                        <input type="text" placeholder="Search anything">
-                        
-                    </div>
-                    <div class="textName">
-                        <h1>Hi Ryhan</h1>
-                        <img src="/Images/person-circle.svg" alt="Man">
-                    </div>
-                </section>
-            </nav>
-        </header>
-        <section class="section body">
-            <div class="text1">
-                <img src="/Images/arrow-left.svg" alt="Arrow">
-                <a href="#">Back to investments</a>
-            </div>
-            <div class="text2">
-                <h1>Waystar RoyCo</h1>
-            </div>
-        </section>
-        <section class="list-style">
-            <ul class="navbar-nav">
-                <li class="nav-item active"><a href="#">Overview</a></li>
-                <li class="nav-item"><a href="#">Documents</a></li>
-                <li class="nav-item"><a href="#">Distributions</a></li>
-            </ul>
-        </section>
-        <section class="container">
-            <section class="box-section">
-                <div class="box1">
-                 <h1>$120,000</h1>
-                 <p>TOTAL AMOUNT INVESTED</p>
-                </div>
-                <div class="box2">
-                 <h1>$3,370.80</h1>
-                 <p>TOTAL DISTRIBUTIONS</p>
-                </div>
-                <div class="box3">
-                 <h1>9%</h1>
-                 <p>CASH-ON-CASH RETURN</p>
-                </div>
-                <div class="box4">
-                 <h1>12/21/2023(Q4)</h1>
-                 <p>NEXT PAYOUT</p>
-                </div>
-             </section>
-             <section class="chartflow">
-                 <div class="text">
-                     <h1>Cashflow History</h1>
-                     <h2>9% APY</h2>
-                    </div>
-                    <canvas id="lineChart"></canvas>
-             </section>
-             <section class="side-bar">
-                <div class="company-logo">
-                    <h1>WAYSTAR|ROYCO</h1>
-                </div>
-                <div class="company-address">
-                    <div class="company-address1">
-                        <h1>COMPANY ADDRESS</h1>
-                        <p>4236 Jovany Garden <br>Suit 579</p>
-                    </div>
-                    <div class="company-address2">
-                        <p>New York, NY, 80766-9397  <br> United States</p>
-                    </div>
-                </div>
-                <div class="contact-address">
-                    <div class="contact-address1">
-                        <h1>POINT OF CONTACT</h1>
-                        <h1>Marcia Roy</h1>
-                        <p>Investor Relations</p>
-                    </div>
-                    <div class="contact-address2">
-                        <h1>PHONE/FAX</h1>
-                        <p>(751) 564 01 96</p>
-                    </div>
-                </div>
-                <div class="email-address">
-                    <h1>EMAIL</h1>
-                    <p>macia.roy@waystarroyco.com</p>
-                </div>
-                <div class="investor">
-                    <img src="/Images/award1.jpg" alt="award1">
-                    <img src="/Images/award2.jpg" alt="award2">
-                    <h1>INVESTOR SINCE</h1>
-                    <p>Sep. 10, 2021 (2 yrs)</p>
-                </div>
-             </section>
-        </section>
-
-        <section class="copywrite">
-            <p>Sharewillow, Inc &copy; 2023, All Rights Reserved</p>
-        </section>
+  <div class="page-container">
+    <nav>
+      <div class="page-logo">
+        <img src="/Images/images.jpeg" alt="" class="logo" />
+      </div>
+      <div class="search-bar">
+        <div class="searchForm">
+          <img src="/Images/search.svg" alt="Search">
+          <input type="text" name="" id="" placeholder="Search anything" />
+        </div>
+        <div class="user-profile">
+          <p class="profile-name">Hi Ryan</p>
+          <img src="/Images/person.svg" alt="" />
+        </div>
+      </div>
+      <div class="mobile-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
+    <div class="arrow-logo">
+      <img src="/Images/arrow-left.svg" alt="Arrow">
+      <a href="#">Back to investments</a>
     </div>
-    <script src="js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/chart.js"></script>
+    <div class="body-text">
+      <h1>Waystar RoyCo</h1>
+      <section class="list-menu">
+        <ul class="navbar-nav">
+            <li class="nav-item active"><a href="#">Overview</a></li>
+            <li class="nav-item"><a href="#">Documents</a></li>
+            <li class="nav-item"><a href="#">Distributions</a></li>
+        </ul>
+    </section>
+      <div class="tab-content">
+        <div class="main-tab-content">
+          <div class="summary-grid">
+            <div>
+              <h3>$120,000</h3>
+              <p>Total Amount Invested</p>
+            </div>
+            <div>
+              <h3>$3,370.80</h3>
+              <p>Total Distributions</p>
+            </div>
+            <div>
+              <h3>9%</h3>
+              <p>Cash-on-Cash Return</p>
+            </div>
+            <div>
+              <h3>12/31/2023(Q4)</h3>
+              <p>Next Payout</p>
+            </div>
+          </div>
+          <div class="chart">
+            <div class="chart-header">
+              <h2>Cashflow History</h2>
+              <h2>9% APY</h2>
+            </div>
+            <canvas id="lineChart" class="myChart"></canvas>
+          </div>
+        </div>
+        <div class="aside-tab-content">
+          <img src="/Images/download.png" alt="" class="waystar-logo" />
+          <div class="company-address">
+            <span>Company Address</span>
+            <p>4236 Jovany Garden Suite 579</p>
+            <p>New York, NY, 80766-9397 United States</p>
+          </div>
+          <div class="point-of-contact">
+            <span>Point of Contact</span>
+            <p>Marcia Roy</p>
+            <p>Investor Relations</p>
+          </div>
+          <div class="phone-fax">
+            <span>Phone/Fax</span>
+            <p>(751) 564 01 96</p>
+          </div>
+          <div class="email">
+            <span>Email</span>
+            <p>marcia.roy@waystarroyco.com</p>
+          </div>
+          <hr />
+          <div class="badge">
+            <img src="/Images/award1.jpg" alt="" class="badge-logo" />
+            <img src="/Images/award2.jpg" alt="" class="badge-logo" />
+          </div>
+          <div class="inventor-since">
+            <span>Investor Since</span>
+            <p>Sep 10, 2021 (2yrs)</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <p class="copyright">
+        &copy; ShareWillow, Inc 2023. All Rights Reserved.
+      </p>
+    </footer>
+  </div>
+  <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="js/chart.js"></script>
 </body>
+
 </html>
