--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <li class="nav-item"><a href="#">Distributions</a></li>
         </ul>
     </section>
-      <div class="tab-content">
-        <div class="main-tab-content">
-          <div class="summary-grid">
+      <div class="table-box">
+        <div class="main-table-box">
+          <div class="text-box">
             <div>
               <h3>$120,000</h3>
               <p>Total Amount Invested</p>
@@ -70,15 +70,15 @@
               <p>Next Payout</p>
             </div>
           </div>
-          <div class="chart">
-            <div class="chart-header">
+          <div class="chart-box">
+            <div class="chart-text">
               <h2>Cashflow History</h2>
               <h2>9% APY</h2>
             </div>
-            <canvas id="lineChart" class="myChart"></canvas>
+            <canvas id="lineChart"></canvas>
           </div>
         </div>
-        <div class="aside-tab-content">
+        <div class="sidebar-table-box">
           <img src="/Images/download.png" alt="" class="waystar-logo" />
           <div class="company-address">
             <span>Company Address</span>
@@ -99,9 +99,9 @@
             <p>marcia.roy@waystarroyco.com</p>
           </div>
           <hr />
-          <div class="badge">
-            <img src="/Images/award1.jpg" alt="" class="badge-logo" />
-            <img src="/Images/award2.jpg" alt="" class="badge-logo" />
+          <div class="award">
+            <img src="/Images/award1.jpg" alt="" class="award-logo" />
+            <img src="/Images/award2.jpg" alt="" class="award-logo" />
           </div>
           <div class="inventor-since">
             <span>Investor Since</span>
